--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://10.5.151.240:3306/mybatis-plus-demo
+    url: jdbc:mysql://localhost:3306/mybatis-plus-demo
     username: root
     password: root
 mybatis-plus:
