--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     url: jdbc:mysql://localhost:3306/mybatis-plus-demo
     username: root
     password: root
+
 mybatis-plus:
   configuration:
+    # 开启详细日志输出
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
